--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                                 Jia-Digvijay</h4>
                             <p class="mbr-text align-left mbr-white mbr-fonts-style display-7">
                                 2021.</p>
-                            <div class="mbr-section-btn"><a href="index.html" class="btn btn-md btn-white-outline display-4">Albulm</a>
+                            <div class="mbr-section-btn"><a href="Jia Portfolio/gallery-slideshow-horizontal.html" class="btn btn-md btn-white-outline display-4">Albulm</a>
                             </div>
                         </div>
 
