--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                             <h4 class="card-title align-left mbr-semibold mbr-white mbr-fonts-style display-5">Shitul </h4>
                             <p class="mbr-text align-left mbr-white mbr-fonts-style display-7">
                                 2020.</p>
-                            <div class="mbr-section-btn"><a href="index.html" class="btn btn-md btn-white-outline display-4">Albulm</a>
+                            <div class="mbr-section-btn"><a href="Jia Portfolio/Shitul.html" class="btn btn-md btn-white-outline display-4">Albulm</a>
                             </div>
                         </div>
 
@@ -269,7 +269,7 @@
                                 Mamta</h4>
                             <p class="mbr-text align-left mbr-white mbr-fonts-style display-7">
                                 2022.</p>
-                            <div class="mbr-section-btn"><a href="index.html" class="btn btn-md btn-white-outline display-4">Albulm</a>
+                            <div class="mbr-section-btn"><a href="Jia Portfolio/Mamta.html" class="btn btn-md btn-white-outline display-4">Albulm</a>
                             </div>
                         </div>
 
