--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <p>We Capture Best Moments</p>
                             <a class="btn btn-white" href="contact.html">Contact Now</a>
                         </div>
-                        <img src="images/hardik-film- (10).jpg" alt="slider-img1" class="full_slide_image" />
+                        <img src="images/hardik-film- (21).jpg" alt="slider-img1" class="full_slide_image" />
                     </div>
                     
                 </div>
@@ -216,8 +216,10 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="grid">
-                                <div class="grid-item"><a href="images/hardik-film- (25).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (25).jpg" alt="gallery-img8" data-tilt></div>
-                                <div class="grid-item"><a href="images/hardik-film- (28).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (28).jpg" alt="gallery-img8" data-tilt></div>
+                                <div class="grid-item"><a href="images/hardik films (1).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik films (1).jpg" alt="gallery-img8" data-tilt></div>
+
+                                <div class="grid-item"><a href="images/hardik-film- (25).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (25).jpg" alt="Hardik Film" data-tilt></div>
+                                <div class="grid-item"><a href="images/hardik-film- (28).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (28).jpg" alt="Hardik Film" data-tilt></div>
 
                                 <div class="grid-item"><a href="images/hardik-film- (1).jpeg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (1).jpeg" alt="gallery-img1" data-tilt></div>
                                 <div class="grid-item"><a href="images//hardik-film- (2).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (2).jpg" alt="gallery-img2" data-tilt></div>
@@ -226,17 +228,17 @@
                                 <div class="grid-item"><a href="images/hardik-film- (3).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (3).jpg" alt="gallery-img5" data-tilt></div>
                                 <div class="grid-item"><a href="images/hardik-film- (4).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (4).jpg" alt="gallery-img6" data-tilt></div>
                                 <div class="grid-item"><a href="images/hardik-film- (5).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (5).jpg" alt="gallery-img7" data-tilt></div>
-                                <div class="grid-item"><a href="images/hardik-film- (6).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (6).jpg" alt="gallery-img8" data-tilt></div>
-                                <div class="grid-item"><a href="images/hardik-film- (7).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (7).jpg" alt="gallery-img8" data-tilt></div>
-                                <div class="grid-item"><a href="images/hardik-film- (8).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (8).jpg" alt="gallery-img8" data-tilt></div>
-                                <div class="grid-item"><a href="images/hardik-film- (9).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (9).jpg" alt="gallery-img8" data-tilt></div>
-                                <div class="grid-item"><a href="images/hardik-film- (10).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (10).jpg" alt="gallery-img8" data-tilt></div>
-                                <div class="grid-item"><a href="images/hardik-film- (11).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (11).jpg" alt="gallery-img8" data-tilt></div>
-                                <div class="grid-item"><a href="images/hardik-film- (12).JPG" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (12).JPG" alt="gallery-img8" data-tilt></div>
-                                <div class="grid-item"><a href="images/hardik-film- (13).JPG" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (13).JPG" alt="gallery-img8" data-tilt></div>
-                                <div class="grid-item"><a href="images/hardik-film- (14).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (14).jpg" alt="gallery-img8" data-tilt></div>
-                                <div class="grid-item"><a href="images/hardik-film- (15).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (15).jpg" alt="gallery-img8" data-tilt></div>
-                                <div class="grid-item"><a href="images/hardik-film- (16).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (16).jpg" alt="gallery-img8" data-tilt></div>
+                                <div class="grid-item"><a href="images/hardik-film- (6).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (6).jpg" alt="Hardik Film" data-tilt></div>
+                                <div class="grid-item"><a href="images/hardik-film- (7).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (7).jpg" alt="Hardik Film" data-tilt></div>
+                                <div class="grid-item"><a href="images/hardik-film- (8).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (8).jpg" alt="Hardik Film" data-tilt></div>
+                                <div class="grid-item"><a href="images/hardik-film- (9).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (9).jpg" alt="Hardik Film" data-tilt></div>
+                                <div class="grid-item"><a href="images/hardik-film- (10).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (10).jpg" alt="Hardik Film" data-tilt></div>
+                                <div class="grid-item"><a href="images/hardik-film- (11).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (11).jpg" alt="Hardik Film" data-tilt></div>
+                                <div class="grid-item"><a href="images/hardik-film- (12).JPG" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (12).JPG" alt="Hardik Film" data-tilt></div>
+                                <div class="grid-item"><a href="images/hardik-film- (13).JPG" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (13).JPG" alt="Hardik Film" data-tilt></div>
+                                <div class="grid-item"><a href="images/hardik-film- (14).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (14).jpg" alt="Hardik Film" data-tilt></div>
+                                <div class="grid-item"><a href="images/hardik-film- (15).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (15).jpg" alt="Hardik Film" data-tilt></div>
+                                <div class="grid-item"><a href="images/hardik-film- (16).jpg" class="full-screen-btn superLightBox"><i class="fas fa-expand-arrows-alt"></i></a><img src="images/hardik-film- (16).jpg" alt="Hardik Film" data-tilt></div>
                                 
                             </div>
                         </div>
@@ -317,10 +319,9 @@
                         </ul>
                     </div>
                     <div class="col-lg-3 mb-4">
-                        <h5 class="mb-4">Contact “Hardik-Films-Deesa”</h5>
+                        <h5 class="mb-4">Hardik-Films-Deesa</h5>
                             <p>Deesa,North Gujarat,<br> Gujarat, India.</p>
                             <p><strong>Phone:</strong> <a href="tel:+919898787670">(+91)9898 787670</a><br>
-                            <p><strong>Phone:</strong> <a href="tel:+917069787670">(+91)7069 787670</a><br>
                             <strong>Email:</strong> <a href="mailto:jparmar9054@gmail.com">info@jayantimali.com</a></p>
                         <ul class="footer-social clearfix">
                             <li><a href="https://www.facebook.com/shreenathjistudiodeesa" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
