--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <div class = “Hardik-Films-Deesa”></div>
     <div class = “Best-photographer-in-deesa”></div>
     <div class = “photographer-in-deesa”></div>
+    <meta name="robots" content="follow,index">
     <meta name="description" content="Hardik Films Deesa,Jayantibhai Mali,Best Candid Photographerin Deesa,Hardik Films - Best Photographer In Deesa-Videographer in Deesa">
-    <meta name="keywords" content="Best Photographer in Deesa,Hardik Films - Best Photographer In Deesa-Videographer in Deesa">
+    <meta name="keywords" content="Best Photographer, Deesa,Hardik Films,Videographer in Deesa">
 
 <head>
     <!-- Required meta tags -->
