--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <meta name="keywords" content="Best Photographer, Deesa,Hardik Films,Videographer in Deesa">
 
 <head>
-    <!-- Required meta tags -->
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KWVCGGL');</script>
+    <!-- End Google Tag Manager -->
+        <!-- Required meta tags -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
@@ -27,8 +35,12 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/superlightbox.min.css">
     <link rel="stylesheet" href="css/custom.css">
-<meta name="google-site-verification" content="mw6gmC1e1c7-q7mVKcj-fS8MlLMpZpltOu-LgYE58zI" />
+<meta name="google-site-verification" content="UwJ80KfgEDHxSA6Q2fjfh-JEXgNA-DZcswaXjVnYGl8" />
 <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KWVCGGL"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="loader" id="pre-loader">
         <div class="lds-ellipsis">
             <div></div>
