--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+    <meta name="robots" content="follow,index">
+    <meta name="description" content="Hardik Films Deesa,Jayantibhai Mali,Best Candid Photographerin Deesa,Hardik Films - Best Photographer In Deesa-Videographer in Deesa">
+    <meta name="keywords" content="Best Photographer, Deesa,Hardik Films,Videographer in Deesa">
+
+<head>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KWVCGGL');</script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
