--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <title>Hardik Films - Best Photographer In Deesa-Videographer in Deesa</title>
+    <title>Hardik Films Deesa- Best Photographer In Deesa-Videographer in Deesa</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -339,7 +339,7 @@
                         <ul class="footer-social clearfix">
                             <li><a href="https://www.facebook.com/shreenathjistudiodeesa" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                             <li><a href="tel:+917069787670" target="_blank"><i class="fas fa-mobile-alt"></i></a></li>
-                            <li><a href="https://www.instagram.com/jayantibhai_mali2071/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.instagram.com/hardik_films_deesa/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                             <li><a href="https://wa.me/%2B919898787670?text=Hello%20Jayantibhai%20I%20am%20" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
                             <li><a href="tel:+919898787670" target="_blank"><i class="fas fa-phone"></i></a></li>
                         </ul>
