--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,29 @@
 <html lang="en">
 
 <head>
+    <!-- Primary Meta Tags -->
+<title>Hardik Films Deesa|Best Photographer In Deesa|Videographer in Deesa|Photographer near me |Wedding photographer near me|Jayantibhai Mali</title>
+<meta name="title" content="Hardik Films Deesa|Best Photographer In Deesa|Videographer in Deesa|Photographer near me |Wedding photographer near me|Jayantibhai Mali">
+<meta name="description" content="Hardik Films Deesa since 1990|We capture Photographers|Best Photographer In Deesa|Videographer in Deesa|Photographer near me |Wedding photographer near me|Jayantibhai Mali">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.jayantimali.in/">
+<meta property="og:title" content="Hardik Films Deesa|Best Photographer In Deesa|Videographer in Deesa|Photographer near me |Wedding photographer near me|Jayantibhai Mali">
+<meta property="og:description" content="Hardik Films Deesa since 1990|We capture Photographers|Best Photographer In Deesa|Videographer in Deesa|Photographer near me |Wedding photographer near me|Jayantibhai Mali">
+<meta property="og:image" content="">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://www.jayantimali.in/">
+<meta property="twitter:title" content="Hardik Films Deesa|Best Photographer In Deesa|Videographer in Deesa|Photographer near me |Wedding photographer near me|Jayantibhai Mali">
+<meta property="twitter:description" content="Hardik Films Deesa since 1990|We capture Photographers|Best Photographer In Deesa|Videographer in Deesa|Photographer near me |Wedding photographer near me|Jayantibhai Mali">
+<meta property="twitter:image" content="">
     <!-- Required meta tags -->
     <meta name="robots" content="follow,index">
     <meta name="description" content="Hardik Films Deesa,Jayantibhai Mali,Best Candid Photographerin Deesa,Hardik Films - Best Photographer In Deesa-Videographer in Deesa">
-    <meta name="keywords" content="Best Photographer, Deesa,Hardik Films,Videographer in Deesa">
+    <meta name="keywords" content="Best Photographer,Photographer near me, Deesa,Hardik Films,Videographer in Deesa">
 
-<head>
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -18,7 +35,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <title>Hardik Films Deesa-Best Photographer in Deesa </title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
